# langsmith-evaluation-helper

./: .gitignore  CONTRIBUTING.md  Makefile  README.md  pyproject.toml  requirements.txt
.github/: CODEOWNERS  CODE_OF_CONDUCT.md
.github/workflows/: pr-check.yml  release.yml
cookbook/: README.md
cookbook/experiment/toxic_query/: README.md  config_assert.yml  config_azure_gpt.yml  config_basic.yml  config_custom_run.yml  config_limit.yml  config_multi_provider.yml  config_repetitions.yml  config_split.yml  custom_run.py  evaluations.py  prompt.py
cookbook/setup/: README.md  toxic_query_dataset.py  toxic_query_split_dataset.py
scripts/: format.sh  lint.sh
src/langsmith_evaluation_helper/: __init__.py  builtin_evaluators.py  cli.py  load_run_function.py  loader.py  schema.py  utils.py
src/langsmith_evaluation_helper/llm/: model.py  prompt_template_wrapper.py
tests/: conftest.py  factory.py  utils.py
tests/langsmith_evaluation_helper/: config_input.py  langsmith_mock.py  test_function_loader.py  test_generate_builtin_evaluator_functions.py  test_loader.py  test_models.py
tests/langsmith_evaluation_helper/loader_integration_test/: evaluations.py  prompt.py  test_integration_loader.py
